--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^12.4.0",
-        "vue-plain-pagination": "^0.3.0"
+        "postcss-loader": "^3.0.0",
+        "raw-loader": "^3.1.0",
+        "style-loader": "^1.0.1",
+        "vue-plain-pagination": "^0.3.0",
+        "webpack": "^4.41.2",
+        "webpack-cli": "^3.3.10"
     }
 }
